==> ghi-electronics/TinyCLR-Ports/Targets/STM32F7xx/STM32F7_I2C.cpp <==
#include "STM32F7.h"
#define  I2C_NO_STARTSTOP               ((uint32_t)0x00000000)
#define  I2C_GENERATE_STOP              I2C_CR2_STOP
#define  I2C_GENERATE_START_READ        (uint32_t)(I2C_CR2_START | I2C_CR2_RD_WRN)
#define  I2C_GENERATE_START_WRITE       I2C_CR2_START
#define  I2C_RELOAD_MODE                I2C_CR2_RELOAD
#define  I2C_AUTOEND_MODE               I2C_CR2_AUTOEND
#define  I2C_SOFTEND_MODE               ((uint32_t)0x00000000)
#define I2C_TRANSACTION_TIMEOUT 2000 // 2 seconds
#define I2C_MAX_TRANSFER 255

const TinyCLR_Api_Info* STM32F7_I2c_GetApi() {
    for (auto i = 0; i < TOTAL_I2C_CONTROLLERS; i++) {
        i2cProvider[i] = (TinyCLR_I2c_Provider*)(i2cProviderDefs + (i * sizeof(TinyCLR_I2c_Provider)));
        i2cProvider[i]->Parent = &i2cApi;
        i2cProvider[i]->Index = i;
        i2cProvider[i]->Acquire = &STM32F7_I2c_Acquire;
        i2cProvider[i]->Release = &STM32F7_I2c_Release;
        i2cProvider[i]->SetActiveSettings = &STM32F7_I2c_SetActiveSettings;
        i2cProvider[i]->Read = &STM32F7_I2c_Read;
        i2cProvider[i]->Write = &STM32F7_I2c_Write;
        i2cProvider[i]->WriteRead = &STM32F7_I2c_WriteRead;
    }

    i2cApi.Author = "GHI Electronics, LLC";
    i2cApi.Name = "GHIElectronics.TinyCLR.NativeApis.STM32F7.I2cProvider";
    i2cApi.Type = TinyCLR_Api_Type::I2cProvider;
    i2cApi.Version = 0;
    i2cApi.Count = TOTAL_I2C_CONTROLLERS;
    i2cApi.Implementation = (i2cApi.Count > 1) ? i2cProvider : (TinyCLR_I2c_Provider**)&i2cProviderDefs;

    if (TOTAL_I2C_CONTROLLERS > 0)
        g_STM32_I2c_Port[0] = I2C1;

    if (TOTAL_I2C_CONTROLLERS > 1)
        g_STM32_I2c_Port[1] = I2C2;

    return &i2cApi;
}

void STM32F7_I2c_StartTransaction(int32_t port_id) {
    auto& I2Cx = g_STM32_I2c_Port[port_id];

    STM32F7_I2c_Transaction *transaction = g_currentI2cTransactionAction[port_id];

    uint32_t ccr = g_I2cConfiguration[port_id].clockRate + (g_I2cConfiguration[port_id].clockRate2 << 8);

    uint32_t transferMode = I2C_SOFTEND_MODE;
    uint16_t deviceAddress = g_I2cConfiguration[port_id].address;
    uint8_t bytesToTransfer = transaction->bytesToTransfer;
    if (bytesToTransfer > I2C_MAX_TRANSFER) {
        transferMode = I2C_CR2_RELOAD;
        bytesToTransfer = I2C_MAX_TRANSFER;

    }
    /*Disable before set timing*/
    STM32F7_I2c_Disable(I2Cx);

    I2Cx->TIMINGR = (0xA0000000) | (ccr);

    /* Enable the selected I2C peripheral */
    STM32F7_I2c_Enable(I2Cx);

    if (transaction->isReadTransaction) {
        STM32F7_I2c_InternalTransferConfig(port_id, deviceAddress, bytesToTransfer, transferMode, I2C_GENERATE_START_READ);
        STM32F7_I2c_InterruptEnable(I2Cx, I2C_CR1_ERRIE | I2C_CR1_TCIE | I2C_CR1_STOPIE | I2C_CR1_NACKIE | I2C_CR1_RXIE);
    }
    else {
        STM32F7_I2c_InternalTransferConfig(port_id, deviceAddress, bytesToTransfer, transferMode, I2C_GENERATE_START_WRITE);
        STM32F7_I2c_InterruptEnable(I2Cx, I2C_CR1_ERRIE | I2C_CR1_TCIE | I2C_CR1_STOPIE | I2C_CR1_NACKIE | I2C_CR1_TXIE);
    }
}

void STM32F7_I2c_StopTransaction(int32_t port_id) {
    auto& I2Cx = g_STM32_I2c_Port[port_id];

    I2Cx->CR2 |= I2C_CR2_STOP;  // send stop
    STM32F7_I2c_InterruptDisable(I2Cx, I2C_CR1_ERRIE | I2C_CR1_TCIE | I2C_CR1_STOPIE | I2C_CR1_NACKIE | I2C_CR1_TXIE | I2C_CR1_RXIE); // disable interrupts

    g_currentI2cTransactionAction[port_id]->isDone = true;
}

TinyCLR_Result STM32F7_I2c_SetActiveSettings(const TinyCLR_I2c_Provider* self, int32_t slaveAddress, TinyCLR_I2c_BusSpeed busSpeed) {
    uint32_t rateKhz;
    uint32_t ccr;

    int32_t port_id = self->Index;

    if (busSpeed == TinyCLR_I2c_BusSpeed::FastMode)
        rateKhz = 400; // FastMode
    else if (busSpeed == TinyCLR_I2c_BusSpeed::StandardMode)
        rateKhz = 100; // StandardMode
    else
        return TinyCLR_Result::NotSupported;

    uint32_t clk_num;
    uint32_t period_ns = (1000000 / rateKhz);
    uint32_t clk_i2c_ns = ((1000000 / 54000)) *(0xA + 1); // Did = 0xA

    while ((1000000 / period_ns) > rateKhz) {
        period_ns++;
    }

    clk_num = (period_ns / clk_i2c_ns);
    clk_num -= 2; // There are 2 lock delay as default;
    clk_num = clk_num / 2;

    if (clk_num > I2C_MAX_TRANSFER)
        clk_num = I2C_MAX_TRANSFER;

    g_I2cConfiguration[port_id].clockRate = (uint8_t)(clk_num); // low byte
    g_I2cConfiguration[port_id].clockRate2 = (uint8_t)(clk_num); // high byte
    g_I2cConfiguration[port_id].address = slaveAddress;


    return TinyCLR_Result::Success;
}

TinyCLR_Result STM32F7_I2c_Acquire(const TinyCLR_I2c_Provider* self) {
    if (self == nullptr)
        return TinyCLR_Result::ArgumentNull;

    int32_t port_id = self->Index;

    auto& I2Cx = g_STM32_I2c_Port[port_id];
    auto& scl = g_STM32F7_I2c_Scl_Pins[port_id];
    auto& sda = g_STM32F7_I2c_Sda_Pins[port_id];

    if (!STM32F7_GpioInternal_OpenPin(sda.number) || !STM32F7_GpioInternal_OpenPin(scl.number))
        return TinyCLR_Result::SharingViolation;

    STM32F7_GpioInternal_ConfigurePin(sda.number, STM32F7_Gpio_PortMode::AlternateFunction, STM32F7_Gpio_OutputType::OpenDrain, STM32F7_Gpio_OutputSpeed::VeryHigh, STM32F7_Gpio_PullDirection::PullUp, sda.alternateFunction);
    STM32F7_GpioInternal_ConfigurePin(scl.number, STM32F7_Gpio_PortMode::AlternateFunction, STM32F7_Gpio_OutputType::OpenDrain, STM32F7_Gpio_OutputSpeed::VeryHigh, STM32F7_Gpio_PullDirection::PullUp, scl.alternateFunction);

    switch (port_id) {
    case 0:
        RCC->APB1ENR |= RCC_APB1ENR_I2C1EN; // enable I2C clock
        RCC->APB1RSTR = RCC_APB1RSTR_I2C1RST; // reset I2C peripheral
        STM32F7_InterruptInternal_Activate(I2C1_EV_IRQn, (uint32_t*)&STM32F7_I2C1_EV_Interrupt, 0);
        STM32F7_InterruptInternal_Activate(I2C1_ER_IRQn, (uint32_t*)&STM32F7_I2C1_ER_Interrupt, 0);
        break;

    case 1:
        RCC->APB1ENR |= RCC_APB1ENR_I2C2EN; // enable I2C clock
        RCC->APB1RSTR = RCC_APB1RSTR_I2C2RST; // reset I2C peripheral
        STM32F7_InterruptInternal_Activate(I2C2_EV_IRQn, (uint32_t*)&STM32F7_I2C2_EV_Interrupt, 0);
        STM32F7_InterruptInternal_Activate(I2C2_ER_IRQn, (uint32_t*)&STM32F7_I2C2_ER_Interrupt, 0);
        break;
    }

    RCC->APB1RSTR = 0;

    g_I2cConfiguration[port_id].isOpened = true;

    return TinyCLR_Result::Success;
}

TinyCLR_Result STM32F7_I2c_Release(const TinyCLR_I2c_Provider* self) {
    if (self == nullptr)
        return TinyCLR_Result::ArgumentNull;

    auto& I2Cx = g_STM32_I2c_Port[self->Index];
    auto& scl = g_STM32F7_I2c_Scl_Pins[self->Index];
    auto& sda = g_STM32F7_I2c_Sda_Pins[self->Index];

    STM32F7_I2c_InterruptDisable(I2Cx, I2C_CR1_ERRIE | I2C_CR1_TCIE | I2C_CR1_STOPIE | I2C_CR1_NACKIE | I2C_CR1_TXIE | I2C_CR1_RXIE); // disable interrupts
    switch (self->Index) {
    case 0:


        STM32F7_InterruptInternal_Deactivate(I2C1_EV_IRQn);
        STM32F7_InterruptInternal_Deactivate(I2C1_ER_IRQn);

        STM32F7_I2c_Disable(I2Cx);
        RCC->APB1ENR &= ~RCC_APB1ENR_I2C1EN; // disable I2C clock
        break;

    case 1:
        STM32F7_InterruptInternal_Deactivate(I2C2_EV_IRQn);
        STM32F7_InterruptInternal_Deactivate(I2C2_ER_IRQn);

        STM32F7_I2c_Disable(I2Cx);
        RCC->APB1ENR &= ~RCC_APB1ENR_I2C2EN; // disable I2C clock

    // TODO other ports
        break;
    }

    STM32F7_GpioInternal_ClosePin(sda.number);
    STM32F7_GpioInternal_ClosePin(scl.number);

    g_I2cConfiguration[self->Index].isOpened = false;

    return TinyCLR_Result::Success;
}

void STM32F7_I2c_Reset() {
    for (auto i = 0; i < TOTAL_I2C_CONTROLLERS; i++) {
        if (g_I2cConfiguration[i].isOpened)
            STM32F7_I2c_Release(i2cProvider[i]);

        g_I2cConfiguration[i].address = 0;
        g_I2cConfiguration[i].clockRate = 0;
        g_I2cConfiguration[i].clockRate2 = 0;

        g_ReadI2cTransactionAction[i].bytesToTransfer = 0;
        g_ReadI2cTransactionAction[i].bytesTransferred = 0;

        g_WriteI2cTransactionAction[i].bytesToTransfer = 0;
        g_WriteI2cTransactionAction[i].bytesTransferred = 0;

        g_I2cConfiguration[i].isOpened = false;
    }
}
