==> ghi-electronics/TinyCLR-Ports/Targets/LPC17/LPC17_I2C.cpp <==
#include <LPC17.h>
#define I2C_TRANSACTION_TIMEOUT 2000 // 2 seconds

const TinyCLR_Api_Info* LPC17_I2c_GetApi() {
    i2cProvider.Parent = &i2cApi;
    i2cProvider.Index = 0;
    i2cProvider.Acquire = &LPC17_I2c_Acquire;
    i2cProvider.Release = &LPC17_I2c_Release;
    i2cProvider.SetActiveSettings = &LPC17_I2c_SetActiveSettings;
    i2cProvider.Read = &LPC17_I2c_ReadTransaction;
    i2cProvider.Write = &LPC17_I2c_WriteTransaction;
    i2cProvider.WriteRead = &LPC17_I2c_WriteReadTransaction;

    i2cApi.Author = "GHI Electronics, LLC";
    i2cApi.Name = "GHIElectronics.TinyCLR.NativeApis.LPC17.I2cProvider";
    i2cApi.Type = TinyCLR_Api_Type::I2cProvider;
    i2cApi.Version = 0;
    i2cApi.Count = 1;
    i2cApi.Implementation = &i2cProvider;

    return &i2cApi;
}

void LPC17_I2c_StartTransaction() {
    LPC17xx_I2C& I2C = *(LPC17xx_I2C*)(size_t)(LPC17xx_I2C::c_I2C_Base);

    if (!g_WriteI2cTransactionAction.repeatedStart || g_WriteI2cTransactionAction.bytesTransferred == 0) {
        I2C.I2SCLH = g_I2cConfiguration.clockRate | (g_I2cConfiguration.clockRate2 << 8);
        I2C.I2SCLL = g_I2cConfiguration.clockRate | (g_I2cConfiguration.clockRate2 << 8);

        I2C.I2CONSET = LPC17xx_I2C::STA;
    }
    else {
        I2C.I2CONSET = LPC17xx_I2C::STA;
    }

}

void LPC17_I2c_StopTransaction() {
    LPC17xx_I2C& I2C = *(LPC17xx_I2C*)(size_t)(LPC17xx_I2C::c_I2C_Base);

    I2C.I2CONSET = LPC17xx_I2C::STO;
    I2C.I2CONCLR = LPC17xx_I2C::AA | LPC17xx_I2C::SI | LPC17xx_I2C::STA;

    g_currentI2cTransactionAction->isDone = true;
}

TinyCLR_Result LPC17_I2c_SetActiveSettings(const TinyCLR_I2c_Provider* self, int32_t slaveAddress, TinyCLR_I2c_BusSpeed busSpeed) {
    uint32_t rateKhz;

    if (busSpeed == TinyCLR_I2c_BusSpeed::FastMode)
        rateKhz = 400; // FastMode
    else if (busSpeed == TinyCLR_I2c_BusSpeed::StandardMode)
        rateKhz = 100; // StandardMode
    else
        return TinyCLR_Result::NotSupported;

    uint32_t divider = LPC17xx_I2C::c_I2C_Clk_KHz / (2 * rateKhz);

    g_I2cConfiguration.clockRate = (uint8_t)divider; // low byte
    g_I2cConfiguration.clockRate2 = (uint8_t)(divider >> 8); // high byte
    g_I2cConfiguration.address = slaveAddress;

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC17_I2c_Acquire(const TinyCLR_I2c_Provider* self) {
    LPC17xx_I2C& I2C = *(LPC17xx_I2C*)(size_t)(LPC17xx_I2C::c_I2C_Base);

    if (self == nullptr)
        return TinyCLR_Result::ArgumentNull;

    if (!LPC17_Gpio_OpenPin(g_i2c_sda_pins[self->Index].number) || !LPC17_Gpio_OpenPin(g_i2c_scl_pins[self->Index].number))
        return TinyCLR_Result::SharingViolation;

    LPC17_Gpio_ConfigurePin(g_i2c_sda_pins[self->Index].number, LPC17_Gpio_Direction::Input, g_i2c_sda_pins[self->Index].pinFunction, LPC17_Gpio_ResistorMode::Inactive, LPC17_Gpio_Hysteresis::Disable, LPC17_Gpio_InputPolarity::NotInverted, LPC17_Gpio_SlewRate::StandardMode, LPC17_Gpio_OutputType::PushPull);
    LPC17_Gpio_ConfigurePin(g_i2c_scl_pins[self->Index].number, LPC17_Gpio_Direction::Input, g_i2c_scl_pins[self->Index].pinFunction, LPC17_Gpio_ResistorMode::Inactive, LPC17_Gpio_Hysteresis::Disable, LPC17_Gpio_InputPolarity::NotInverted, LPC17_Gpio_SlewRate::StandardMode, LPC17_Gpio_OutputType::PushPull);

    LPC17_Interrupt_Activate(I2C0_IRQn, (uint32_t*)&LPC17_I2c_InterruptHandler, 0);

    // enable the I2c module
    I2C.I2CONSET = LPC17xx_I2C::I2EN;

    // set the slave address
    I2C.I2ADR = 0x7E;

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC17_I2c_Release(const TinyCLR_I2c_Provider* self) {

    LPC17xx_I2C& I2C = *(LPC17xx_I2C*)(size_t)(LPC17xx_I2C::c_I2C_Base);

    if (self == nullptr)
        return TinyCLR_Result::ArgumentNull;

    LPC17_Interrupt_Deactivate(I2C0_IRQn);

    I2C.I2CONCLR = (LPC17xx_I2C::AA | LPC17xx_I2C::SI | LPC17xx_I2C::STO | LPC17xx_I2C::STA | LPC17xx_I2C::I2EN);

    LPC17_Gpio_ClosePin(g_i2c_sda_pins[self->Index].number);
    LPC17_Gpio_ClosePin(g_i2c_scl_pins[self->Index].number);

    return TinyCLR_Result::Success;
}

void LPC17_I2c_Reset() {
    LPC17_I2c_Release(&i2cProvider);
}
